# REFLEX-ARENA-DEMO

./: .env.example  .gitignore  .tool-versions  Makefile  README.md  docker-compose.yml
.github/workflows/: pipeline.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  db.py  logging_setup.py  main.py  metrics.py  schemas.py
backend/tests/: conftest.py  test_api.py  test_auth.py
docs/: DECISIONS.md  RUNBOOK.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/nginx/: default.conf.template
frontend/src/: App.jsx  Game.jsx  Leaderboard.jsx  api.js  styles.css
infra/: dynamodb.tf  ecr.tf  eks.tf  eso.tf  github.tf  irsa.tf  k8s.tf  main.tf  outputs.tf  secrets.tf  terraform.tfvars  variables.tf  versions.tf  vpc.tf
k8s/: backend.yaml  configmap.yaml  externalsecret.yaml  frontend.yaml  hpa.yaml  kustomization.yaml  networkpolicy.yaml  pdb.yaml  secretstore.yaml
loadtest/: k6-load.js  k6-smoke.js
scripts/: bootstrap-state.sh  chaos-kill-pod.sh  watch-scaling.sh
